Fix: Add missing quote to Next.js version value

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint"
   },
   "dependencies": {
-    "next": 15.5.9",
+    "next": "15.5.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
